fix(wyswig): onclick focus on contenteditable fields that immediatly focus on ios when tapped one time instead of two, fixing #298

--- a/app/client/stylesheets/defaults/all.sass
+++ b/app/client/stylesheets/defaults/all.sass
@@ -3,3 +3,7 @@
 
 button
     cursor: pointer
+
+[contenteditable]
+    -webkit-user-select: text
+    user-select: text
